--- a/index.html
+++ b/index.html
@@ -3,22 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tanito Pizza</title>
+  <title>Super del Barrio - Autoservice
+
+
+
+  </title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Super del Barrio</h1>
-    <p>Autoservice Super del Barrio</p>
-    <a href="https://wa.me/59894835827" target="_blank" class="btn">Pedir por WhatsApp</a>
+    <img src="imagenes/logo_super.jpg" alt="Logo Super del Barrio" class="logo">
+    <div class="header-text">
+      <h1>🛒 Super del Barrio</h1>
+      <p class="tagline">Calidad, cercanía y atención personalizada</p>
+    </div>
+    <div class="actions">
+      <a href="https://wa.me/59899912651" target="_blank" class="btn btn-whatsapp">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20" fill="white">
+          <path d="M380.9 97.1C339 55.1 283.4 32 224.1 32 100.3 32 0 132.3 0 256c0 45 12 88.9 34.8 127.8L0 480l98.5-32.6C137.3 472 179.6 480 224.1 480c123.8 0 224.1-100.3 224.1-224 0-59.3-23.1-114.9-67.3-156.9zM224.1 439.6c-37 0-73-11-103.2-31.6l-7.3-4.3-58.6 19.4 19.7-57.2-4.7-7.4C70 320.6 58.1 291.2 58.1 256.1 58.1 152.1 144.1 66.1 248.1 66.1c60.7 0 117.2 23.9 159.1 67.4 41.8 43.5 64.9 100.8 64.9 162.4 0 104-86 190-190 190z"/>
+          <path d="M320.2 269.1c-5-2.5-29.7-14.6-34.3-16.3-4.6-1.7-7.9-2.5-11.3 2.5s-12.9 16.3-15.8 19.7c-2.9 3.5-5.8 3.9-10.8 1.3-4.9-2.5-20.7-7.6-39.5-24.4-14.6-13-24.5-29-27.4-34C164.9 218 164 214.6 167 211c2.9-3.5 5.8-9.1 8.7-13.6 2.9-4.6 4.4-7.6 6.6-11.6 2.1-3.9 1.1-7.1-.6-9.6-1.7-2.5-11.3-27.3-15.5-37.4-4.1-10.1-8.3-8.9-11.3-9.1-2.9-.2-6.3-.2-9.7-.2-3.5 0-9.2 1.3-14 6.2-4.8 4.8-18.4 18-18.4 43.9 0 25.9 18.9 50.9 21.6 54.4 2.8 3.5 37.6 57.5 91.3 80.6 53.7 23.1 53.7 15.4 63.4 14.5 9.7-.9 31.4-12.8 35.8-25.1 4.4-12.3 4.4-22.8 3.1-25.1-1.2-2.3-4.6-3.7-9.6-6.2z"/>
+        </svg>
+        <span>Pedir por WhatsApp</span>
+      </a>
+      
+    </div>
   </header>
+
+  <section class="services">
+    <h2>Productos y Servicios</h2>
+    <ul>
+    
+      <li>🍎 Frutas y verduras de productores locales</li>
+      <li>🥩 Carnicería y fiambres</li>
+      <li>🥫 Alimentos no perecederos y limpieza</li>
+      <li>🚚 Entregas a domicilio rápidas</li>
+      <li>🎯 Ofertas semanales y combos económicos</li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>📍 Juana de America - Bella Italia — Montevideo, Uruguay</p>
+    <p>📞 • xxx xxx xxx • 
+    <p>© 2025 Super del Barrio. Todos los derechos reservados. Diseñado por <a href="https://www.tesoportecnico.uy" target="_blank">TE Soporte Técnico</a></p>
+  </footer>
 </body>
 </html>
-<section>
-  <h2>Hace tus pedidos</h2>
-  
-</section>
-
-<footer>
-  <p>📍 Bella italia, Montevideo, Uruguay | 📞 094 835 827</p>
-</footer>
